--- a/01_html/Clase2/clase/google.html
+++ b/01_html/Clase2/clase/google.html
@@ -26,7 +26,7 @@
             <button>I'm feeling lucky</button>
         </div>  
         <div style="font-style: italic;">
-            Index contains 25 millons pages (...)
+            Index contains 25 millons pages (.......) 
         </div>
     </div>
 
