--- a/01_html/Clase2/clase/tablas.html
+++ b/01_html/Clase2/clase/tablas.html
@@ -108,5 +108,32 @@
     <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=-58.57807159423829%2C-34.65636872600124%2C-58.3864974975586%2C-34.57556026465246&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=13/-34.6160/-58.4823">Ver mapa más grande</a></small>
 
     <iframe src="google.html" frameborder="0" width="400"></iframe>
+
+    <li>Cliente 1</li>
+    <li>Cliente 2</li>
+
+    <ul>
+        <li>Cliente 1</li>
+        <li>Cliente 2</li>
+        <li>Cliente 3</li>
+        <li>Cliente 4</li>
+        <li>Cliente 5</li>
+        <li>Cliente 6</li>
+        <li>Cliente 7</li>
+        <li>Cliente 8</li>
+        <li>Cliente 9</li>
+        <li>Cliente 10</li>
+        <li>Cliente 11</li>
+        <li>Cliente 12</li>
+        <li>Cliente 13</li>
+        <li>Cliente 14</li>
+        <li>Cliente 15</li>
+        <li>Cliente 16</li>
+        <li>Cliente 17</li>
+        <li>Cliente 18</li>
+        <li>Cliente 19</li>
+        <li>Cliente 20</li>
+    </ul>
+
 </body>
 </html>
